# MyBible_Reader

./: .buildconfig  meson.build  org.gnome.Mybible_Reader.json  org.gnome.Mybible_Reader.json~
data/: meson.build  org.gnome.Mybible_Reader.appdata.xml.in  org.gnome.Mybible_Reader.desktop.in  org.gnome.Mybible_Reader.gschema.xml
po/: POTFILES  meson.build
src/: main.c  meson.build  mybible_reader-window.c  mybible_reader-window.h  mybible_reader-window.ui  mybible_reader.gresource.xml
